feat: add record list

--- a/miniprogram/pages/timer/timer.wxml
+++ b/miniprogram/pages/timer/timer.wxml
@@ -20,5 +20,13 @@
   </button>
 </view>
 
+<view class="name">
+  <input
+  value="{{inputName}}" 
+  placeholder="who is the speaker"
+  bindinput="getName"
+  >
+  </input>
+</view>
 
 
