--- a/miniprogram/pages/timer/timer.wxss
+++ b/miniprogram/pages/timer/timer.wxss
@@ -42,6 +42,16 @@
   z-index: 2;
 }
 
+.name
+{
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 160rpx;
+  font-size: 36rpx;
+  z-index: 2;
+}
+
 .resetImg
 {
   height: 75rpx;
