--- a/miniprogram/pages/timer/timer.wxss
+++ b/miniprogram/pages/timer/timer.wxss
@@ -57,3 +57,12 @@
   height: 75rpx;
   width: 69rpx;
 }
+
+.line
+{
+  height: 2rpx;
+  /* margin-left: 100rpx; */
+  background: #aaa;
+  width: 60%;
+  margin-left: 20%;
+}
