--- a/miniprogram/pages/timer/timer.wxml
+++ b/miniprogram/pages/timer/timer.wxml
@@ -4,7 +4,7 @@
 
 
 <view class="box" style="height:{{windowHeight}}px;">
-  <view class="box-circle" animation="{{animationData}}" bindtap="tapCircle">
+  <view class="box-circle" animation="{{animationData}}" style="border-radius:{{radius}}%" bindtap="tapCircle">
     <label class="box-text" >{{currentStr}}</label>
   </view>
 </view>
